Closed Bug 1720499 Opened 4 years ago Closed 4 years ago

Assertion failure: clone->Equals(this), at /Users/niklasgogge/workspace/mozilla-central/netwerk/protocol/http/nsHttpConnectionInfo.cpp:316

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox92 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

The stack below is copied from bug 1676024 #c18.

0:59.80 pid:64306 Assertion failure: clone->Equals(this), at /Users/niklasgogge/workspace/mozilla-central/netwerk/protocol/http/nsHttpConnectionInfo.cpp:316
 0:59.80 pid:64306 #01: mozilla::net::nsHttpConnectionInfo::Clone() const [/Users/niklasgogge/workspace/mozilla-central/netwerk/protocol/http/nsHttpConnectionInfo.cpp:316]
 0:59.80 pid:64306 #02: mozilla::net::nsHttpConnectionMgr::ProcessPendingQ(mozilla::net::nsHttpConnectionInfo*) [/Users/niklasgogge/workspace/mozilla-central/netwerk/protocol/http/nsHttpConnectionMgr.cpp:559]
 0:59.80 pid:64306 #03: mozilla::net::ConnectionEntry::CloseAllDnsAndConnectSockets() [/Users/niklasgogge/workspace/mozilla-central/netwerk/protocol/http/ConnectionEntry.cpp:99]
 0:59.80 pid:64306 #04: mozilla::net::nsHttpConnectionMgr::AbortAndCloseAllConnections(int, mozilla::net::ARefBase*) [/Users/niklasgogge/workspace/mozilla-central/netwerk/protocol/http/nsHttpConnectionMgr.cpp:1920]
 0:59.80 pid:64306 #05: mozilla::net::nsHttpConnectionMgr::OnMsgShutdown(int, mozilla::net::ARefBase*) [/Users/niklasgogge/workspace/mozilla-central/netwerk/protocol/http/nsHttpConnectionMgr.cpp:1937]
 0:59.80 pid:64306 #06: mozilla::net::ConnEvent::Run() [/Users/niklasgogge/workspace/mozilla-central/netwerk/protocol/http/nsHttpConnectionMgr.cpp:204]
 0:59.80 pid:64306 #07: nsThread::ProcessNextEvent(bool, bool*) [/Users/niklasgogge/workspace/mozilla-central/xpcom/threads/nsThread.cpp:0]
 0:59.80 pid:64306 #08: NS_ProcessNextEvent(nsIThread*, bool) [/Users/niklasgogge/workspace/mozilla-central/xpcom/threads/nsThreadUtils.cpp:548]
 0:59.80 pid:64306 #09: mozilla::net::nsSocketTransportService::Run() [/Users/niklasgogge/workspace/mozilla-central/netwerk/base/nsSocketTransportService2.cpp:1205]

The problem here is that nsProxyInfo::mResolveFlags is modified when the connection info is still referenced by a connection entry.
When this happens, nsHttpConnection::mUsingConnect could be changed to true, so we hit this assertion.
To fix this issue, I think we should not allow to modify nsProxyInfo after it's created.

Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/efaefc2f3342 Don't allow to modify nsProxyInfo::mResolveFlags, r=ngogge
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: