Bug 1720499 - Don't allow to modify nsProxyInfo::mResolveFlags, r=ngogge

Differential Revision: https://phabricator.services.mozilla.com/D119946